--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@keplr-wallet/types": "^0.11.45",
-		"@skeletonlabs/skeleton": "^0.132.5",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@keplr-wallet/types": "^0.12.5",
+		"@skeletonlabs/skeleton": "^1.7.1",
+		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.2.2",
 		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/kit": "^1.20.1",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.13",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
+		"postcss": "^8.4.23",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"secretjs": "~1.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^5.0.1",
-		"tailwindcss": "^3.2.7",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"secretjs": "~1.9.0",
+		"svelte": "^3.59.1",
+		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.5.3",
+		"typescript": "^5.1.0",
+		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
@@ -49,9 +50,10 @@
 		"@ledgerhq/hw-transport-webusb": "^6.27.12",
 		"@metamask/logo": "^3.1.1",
 		"@tharsis/address-converter": "^0.1.8",
+		"axios": "^1.4.0",
 		"highlight.js": "^11.7.0",
 		"ledger-cosmos-js": "^2.1.8",
 		"ripemd160": "^2.0.2",
-		"vite-plugin-node-polyfills": "^0.7.0"
+		"vite-plugin-node-polyfills": "^0.8.2"
 	}
 }
