--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
 	},
 	"devDependencies": {
 		"@keplr-wallet/types": "^0.12.5",
-		"@skeletonlabs/skeleton": "^1.7.1",
+		"@skeletonlabs/skeleton": "1.7.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-node": "^1.2.2",
-		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.20.1",
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/line-clamp": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -28,17 +25,15 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.23",
-		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"secretjs": "~1.9.0",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.4.3",
-		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.3.2",
-		"tslib": "^2.5.3",
-		"typescript": "^5.1.0",
-		"vite": "^4.3.9"
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.0"
 	},
 	"type": "module",
 	"dependencies": {
