--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.23",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"secretjs": "~1.9.0",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.4.3",
